--- a/index.html
+++ b/index.html
@@ -4,8 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .song-name {
+            font-size: 1.2em;
+            font-weight: bold;
+        }
+        .song-description {
+            font-size: 1em;
+            margin-bottom: 1.5em;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>The "TikTok Ruined This"</h1>
+    <p>Songs that were great until they were played 9 million times in 15-second clips.</p>
+
+    <h2>The Academic Version:</h2>
+    <p>"Welcome to the official investigation into the TikTok Song Graveyard. In the modern era, a hit song's greatest blessing is also its biggest curse: going viral. While TikTok can turn an underground track into a global anthem overnight, the platform's 15-second loop cycle has a habit of turning masterpieces into psychological weapons. We are exploring the 'Skip Reflex'—that moment when a song has been used in so many transitions, dance challenges, and 'Get Ready With Me' videos that the human brain simply cannot listen to it anymore without experiencing a mental short-circuit. These are the songs we loved, until the FYP wouldn't let us."</p>
+
+    <div class="song-name">"Dreams" by Fleetwood Mac</div>
+    <div class="song-description">Once a masterpiece of 70s rock, now forever known as "The Cranberry Juice Song." It's impossible to hear that bassline without imagining someone on a skateboard looking way too relaxed.</div>
+
+    <div class="song-name">"Savage Love" by Jawsh 685 and Jason Derulo</div>
+    <div class="song-description">That siren beat was catchy for exactly 14 seconds. By the 15th second (and the 500th video), it became a psychological weapon.</div>
+
+    <div class="song-name">"Blinding Lights" by The Weeknd</div>
+    <div class="song-description">A synth-pop legend that was sacrificed so that entire families could do synchronized jumping dances in their living rooms.</div>
+
+    <div class="song-name">"Say So" by Doja Cat</div>
+    <div class="song-description">The song that proved a 15-second dance could change the world. It's a great song, but if you hear the intro, your arms might start doing the "Say So" dance automatically. It's a reflex now.</div>
+
+    <div class="song-name">"Renegade" / "Lottery" by K CAMP</div>
+    <div class="song-description">The ultimate "Viral Dance" song. It didn't just ruin the song; it created a whole new era of people staring intensely at their front-facing cameras.</div>
+
+    <div class="song-name">"Stunnin'" by Curtis Waters</div>
+    <div class="song-description">"Ice on my neck..." We get it. You're stunnin'. This song was the official anthem of every "glow up" transition video for a year straight.</div>
+
+    <div class="song-name">"Supalonely" by BENEE</div>
+    <div class="song-description">The official anthem of the 2020 lockdowns. Hearing it now doesn't just remind us of the song; it reminds us of being stuck inside for months. Too soon!</div>
+
+    <div class="song-name">"Roses (Imanbek Remix)" by SAINT JHN</div>
+    <div class="song-description">That high-pitched, sped-up vocal was the soundtrack to every "cool car" or "slow-mo" video. It's the sonic equivalent of a neon light—cool at first, then it just gives you a headache.</div>
+
+    <div class="song-name">"WAP" by Cardi B</div>
+    <div class="song-description">Regardless of how you feel about the lyrics, the "Split Challenge" on TikTok resulted in way too many people accidentally ending up in the emergency room.</div>
 </body>
 </html>
